feat: added catalog microservices

--- a/Services/Catalog/Catalog/appsettings.json
+++ b/Services/Catalog/Catalog/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DatabaseSettings": {
-    "CategoryCollectionName": "Categories",
-    "BookCollectionName": "Books",
+    "ConcertCollectionName": "Concerts",
+    "TicketCollectionName": "Tickets",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "CatalogDb"
   },
