--- a/Shared/Shared/Shared.csproj
+++ b/Shared/Shared/Shared.csproj
@@ -5,4 +5,8 @@
 	  <RootNamespace>CodeAcademy.Shared</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
